--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -9,8 +9,8 @@ ul,li,ol {list-style: none; margin:0; padding:0;}
 #wrap {width:auto; height:auto; position:relative;}
 
 /* 헤더 => 예약, 조회, QnA */
-.header {height:85px; width:100%; min-height:85px; margin:0 auto;background-color: rgba(255,255,255,.93); position:fixed; top:0; z-index:100;}
-.header > a {display: inline-block; width:200px; height:100%; float:left}
+.header {height:85px; width:100%; min-height:85px; margin:0 auto;background-color: rgba(255,255,255,.93); position:fixed; top:0; z-index:100; border-bottom:1px solid #dcdcdc;}
+.header > a {display: inline-block; width:200px; height:100%;}
 .header > a > img {width:100%; height:100%; margin-left:100px;}
 .header > nav {float:right; width:65%; height:100%;}
 .header > nav > ul {width:100%;}
@@ -24,7 +24,7 @@ ul,li,ol {list-style: none; margin:0; padding:0;}
 .slider img {width:2000px; height:100%; float:left;}
 
 /* 호텔 방 검색  */
-.sertchWrap {background-color:rgba(140,139,137,.97); position: absolute; top:85px; left:0; z-index:10; width:100%; height:113px;}
+.sertchWrap {background-color:rgba(140,139,137,.97); position: absolute; top:85px; left:0; z-index:10; width:100%; height:113px; }
 .hotelSertch { height:100%; padding:26px 0 22px; box-sizing: border-box;  max-width: 1696px; margin:0 auto;}
 .hotelSertch > form {padding:0 80px;  display: flex; position:relative;}
 
@@ -70,8 +70,6 @@ ul,li,ol {list-style: none; margin:0; padding:0;}
 
 /* 데이터 검색 달력 */
 .dateInput {opacity: 0; top:40px; position:absolute; z-index:100; left:200px; width:1000px; text-align: left; background-color: #fff; border-radius: 10px; box-shadow: 0 15px 60px 0 rgba(0,0,0,0.15); overflow: hidden; outline-offset: 2px; min-height: 343px;}
-.dateInput div {float:left;}
-.datePerson {margin:40px 0 20px 60px;}
-.amounts {text-align: center}
+
 /* 달력 구현했다 시....... */
 .datepicker {margin:40px 0 20px 30px;}
